carothers2000 citerpgc references

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -1083,10 +1083,10 @@
   publisher    = {Cambridge University Press},
   address      = {Cambridge},
   isbn10       = {0521497566},
-  isbn         = {978-0521497565},
+  isbn         = {9780521497565},
   pages        = {432},
   language     = {English},
-  url          = {http://books.google.com/books?vid=ISBN0521497566},
+  url          = {http://books.google.com/books?vid=ISBN9780521497565},
   urlw         = {http://www.worldcat.org/oclc/40218694},
   urla         = {http://www.amazon.com/dp/0521497566},
   }
