--- a/common/sums.tex
+++ b/common/sums.tex
@@ -517,7 +517,7 @@ Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple o
 %--------------------------------------
 \begin{lemma}[\ineqd{Young's Inequality}]
 \footnote{
-  \citerp{carothers2000}{43},
+  \citerpgc{carothers2000}{43}{9780521497565}{Lemma 3.6},
   \citerp{tolsted1964}{5},
   \citerp{maligranda1995}{257},
   \citergc{hardy1934}{0521358809}{Theorem 24},
@@ -616,7 +616,7 @@ Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple o
 \begin{theorem}[\ineqd{H/:older's Inequality}]
 \footnote{
   \citerpgc{bullen2003}{178}{1402015224}{2.1},
-  \citerp{carothers2000}{44},
+  \citerpgc{carothers2000}{44}{9780521497565}{Lemma 3.7},
   \citerp{tolsted1964}{6},
   \citerp{maligranda1995}{257},
   \citergc{hardy1934}{0521358809}{Theorem 11},
@@ -673,7 +673,7 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 \begin{theorem}[\ineqd{Minkowski's Inequality for sequences}]
 \footnote{
   \citerpg{bullen2003}{179}{1402015224},
-  \citerp{carothers2000}{44},
+  \citerpgc{carothers2000}{44}{9780521497565}{Theorem 3.8},
   \citerp{tolsted1964}{7},
   \citerp{maligranda1995}{258},
   \citergc{hardy1934}{0521358809}{Theorem 24},
@@ -823,7 +823,7 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 %--------------------------------------
 \begin{proposition}
 \footnote{
-  \citerp{carothers2000}{43}
+  \citerpgc{carothers2000}{43}{9780521497565}{Lemma 3.5}
   }
 %--------------------------------------
 \propbox{
