--- a/common/somepdfs.tex
+++ b/common/somepdfs.tex
@@ -8,31 +8,31 @@
 %=======================================
 \section{Discrete distributions}
 %=======================================
-\begin{figure}[t]
-\centering
-\begin{tabular}{*{11}{c}}
-  $\scriptstyle \psp\setn{ 2}=\frac{1}{36}$ &
-  $\scriptstyle \psp\setn{ 3}=\frac{2}{36}$ &
-  $\scriptstyle \psp\setn{ 4}=\frac{3}{36}$ &
-  $\scriptstyle \psp\setn{ 5}=\frac{4}{36}$ &
-  $\scriptstyle \psp\setn{ 6}=\frac{5}{36}$ &
-  $\scriptstyle \psp\setn{ 7}=\frac{6}{36}$ &
-  $\scriptstyle \psp\setn{ 8}=\frac{5}{36}$ &
-  $\scriptstyle \psp\setn{ 8}=\frac{4}{36}$ &
-  $\scriptstyle \psp\setn{10}=\frac{3}{36}$ &
-  $\scriptstyle \psp\setn{11}=\frac{2}{36}$ &
-  $\scriptstyle \psp\setn{12}=\frac{1}{36}$
-  \\                  &                  &                  &                  &                  & \diceF\diceA &                  &                  &                  &                  &
-  \\                  &                  &                  &                  & \diceE\diceA & \diceE\diceB & \diceF\diceB &                  &                  &                  &
-  \\                  &                  &                  & \diceD\diceA & \diceD\diceB & \diceD\diceC & \diceE\diceC & \diceF\diceC &                  &                  &
-  \\                  &                  & \diceC\diceA & \diceC\diceB & \diceC\diceC & \diceC\diceD & \diceD\diceD & \diceE\diceD & \diceF\diceD &                  &
-  \\                  & \diceB\diceA & \diceB\diceB & \diceB\diceC & \diceB\diceD & \diceB\diceE & \diceC\diceE & \diceD\diceE & \diceE\diceE & \diceF\diceE &
-  \\ \diceA\diceA & \diceA\diceB & \diceA\diceC & \diceA\diceD & \diceA\diceE & \diceA\diceF & \diceB\diceF & \diceC\diceF & \diceD\diceF & \diceE\diceF & \diceF\diceF
-\end{tabular}
-  \caption{
-    Probability distribution for two dice (see \prefp{ex:two_dice})
-    \label{fig:two_dice}
-    }
+\begin{figure}
+  \centering
+  \begin{tabular}{*{11}{c}}
+    $\scriptstyle \psp\setn{ 2}=\frac{1}{36}$ &
+    $\scriptstyle \psp\setn{ 3}=\frac{2}{36}$ &
+    $\scriptstyle \psp\setn{ 4}=\frac{3}{36}$ &
+    $\scriptstyle \psp\setn{ 5}=\frac{4}{36}$ &
+    $\scriptstyle \psp\setn{ 6}=\frac{5}{36}$ &
+    $\scriptstyle \psp\setn{ 7}=\frac{6}{36}$ &
+    $\scriptstyle \psp\setn{ 8}=\frac{5}{36}$ &
+    $\scriptstyle \psp\setn{ 8}=\frac{4}{36}$ &
+    $\scriptstyle \psp\setn{10}=\frac{3}{36}$ &
+    $\scriptstyle \psp\setn{11}=\frac{2}{36}$ &
+    $\scriptstyle \psp\setn{12}=\frac{1}{36}$
+    \\                  &                  &                  &                  &                  & \diceF\diceA &                  &                  &                  &                  &
+    \\                  &                  &                  &                  & \diceE\diceA & \diceE\diceB & \diceF\diceB &                  &                  &                  &
+    \\                  &                  &                  & \diceD\diceA & \diceD\diceB & \diceD\diceC & \diceE\diceC & \diceF\diceC &                  &                  &
+    \\                  &                  & \diceC\diceA & \diceC\diceB & \diceC\diceC & \diceC\diceD & \diceD\diceD & \diceE\diceD & \diceF\diceD &                  &
+    \\                  & \diceB\diceA & \diceB\diceB & \diceB\diceC & \diceB\diceD & \diceB\diceE & \diceC\diceE & \diceD\diceE & \diceE\diceE & \diceF\diceE &
+    \\ \diceA\diceA & \diceA\diceB & \diceA\diceC & \diceA\diceD & \diceA\diceE & \diceA\diceF & \diceB\diceF & \diceC\diceF & \diceD\diceF & \diceE\diceF & \diceF\diceF
+  \end{tabular}
+    \caption{
+      Probability distribution for two dice (see \prefp{ex:two_dice})
+      \label{fig:two_dice}
+      }
 \end{figure}
 %---------------------------------------
 \begin{example}
@@ -45,7 +45,6 @@ Suppose we throw two ``fair" dice and want to know the probabilities of their su
 Let $\rvX$ represent the sum  of the face values of the two dice.
 The resulting probability distribution is illustrated in \prefpp{fig:two_dice}
 and has probability space as follows:
-
 \exbox{\begin{array}{ll}
   \pso &= \setn{\text{\diceA\diceA,\; \diceA\diceB,\; \diceA\diceC,\;\ldots,\;\diceF\diceF} }
   \\
@@ -53,8 +52,31 @@ and has probability space as follows:
   \\
   \psp(e) &= \frac{1}{36} \seto{e}
 \end{array}}
-
 \end{example}
+
+\begin{figure}
+  \centering
+  \begin{tabular}{|c|}
+    \hline
+     \tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Poisson.pdf}}%
+    \\\hline
+  \end{tabular}
+  \caption{
+    Poisson pdfs \xref{def:pdf_poisson} for $\lambda=\seqn{1,e,4,5}$
+    \label{fig:pdf_poisson}
+    }
+\end{figure}
+%---------------------------------------
+\begin{definition}
+\label{def:pdf_poisson}
+%---------------------------------------
+\exboxt{
+  The function $\ppx(k;\;\lambda)$ is the \fncte{Poisson distribution} if
+  \\\indentx$\ds
+    \ppx(k,\lambda) \eqd \frac{1}{k!} \; \lambda^k\;e^{-\lambda}
+  $
+  }
+\end{definition}
 
 %=======================================
 \section{Continuous distributions}
@@ -280,7 +302,6 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s on a \structe{probability spac
 %=======================================
 %---------------------------------------
 \begin{definition}
-\index{Chi-squared distribution}
 \footnote{
   \citerp{proakis}{41},
   \citerpgc{papoulis1990}{219}{0137116985}{7-4 Special Distributions of Statistics, (7-78)}
@@ -288,19 +309,42 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s on a \structe{probability spac
 \label{def:pdf_chi}
 \label{def:chisq}
 %---------------------------------------
-Let $\pp(x)$ be a \fncte{probability density function} on a \structe{probability space} $\ps$.
-\defboxt{
-  $\pp(x)$ is a \fnctd{chi-square distribution} if
-  \\\indentx$\ds
-    \pp(x) \eqd
-    \brb{\begin{array}{>{\ds}lM}
-      0                                                            &  if $x<   0$ \\
-      \frac{1}{\sqrt{2\pi\sigma^2x}}\exp\brs{-\frac{x}{2\sigma^2}} &  if $x\ge 0$
-    \end{array}}$
-    \qquad
-    for $\sigma>0$
+The \fnctd{Chi-squared distribution with $n$ degrees of freedom} has pdf
+\defbox{
+  \ppx(x) \eqd
+  \brbl{\begin{array}{lM}
+            \ds \frac{1}{2\sigma^2\Gamma(n/2)}
+                \brp{\frac{x}{2\sigma^2}}^{\frac{n}{2}-1}
+                \exp\brp{-\frac{x}{2\sigma^2}}
+            & for $y\ge 0$
+          \\0
+            & otherwise
+        \end{array}}
   }
 \end{definition}
+
+%%---------------------------------------
+%\begin{definition}
+%\footnote{
+%  \citerp{proakis}{41},
+%  \citerpgc{papoulis1990}{219}{0137116985}{7-4 Special Distributions of Statistics, (7-78)}
+%  }
+%\label{def:pdf_chi}
+%\label{def:chisq}
+%%---------------------------------------
+%Let $\pp(x)$ be a \fncte{probability density function} on a \structe{probability space} $\ps$.
+%\defboxt{
+%  $\pp(x)$ is a \fnctd{chi-square distribution} if
+%  \\\indentx$\ds
+%    \pp(x) \eqd
+%    \brb{\begin{array}{>{\ds}lM}
+%      0                                                            &  if $x<   0$ \\
+%      \frac{1}{\sqrt{2\pi\sigma^2x}}\exp\brs{-\frac{x}{2\sigma^2}} &  if $x\ge 0$
+%    \end{array}}$
+%    \qquad
+%    for $\sigma>0$
+%  }
+%\end{definition}
 
 \begin{figure}
   \centering
@@ -342,16 +386,15 @@ Let $\pp(x)$ be a \fncte{probability density function} on a \structe{probability
 \thmboxt{
   The following distributions are equivalent:
   \\\indentx$\begin{array}{FMD}
-      (1).& chi-squared distribution                                            & and
-    \\(2).& distribution of $\rvX^2$ where $\rvX\sim\pN{0}{\sigma^2}$           & and
-    \\(3).& Gamma distribution $\Gamma\brp{\frac{1}{2},\frac{1}{2\sigma^2}}$    &
+      (1).& \fncte{chi-squared distribution with $1$ degree of freedom} & and
+    \\(2).& distribution of $\rvX^2$ where $\rvX\sim\pN{0}{1}$          & and
+    \\(3).& Gamma distribution $\Gamma\brp{\frac{1}{2},\frac{1}{2}}$    &
   \end{array}$
   }
 \\\ldots see \prefpp{fig:Gamma=X^2} for an illustration of (2).
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-
 \item Proof that $\rvX^2$ has chi-squared distribution:
 \begin{align*}
   \ppy(y)
@@ -383,28 +426,7 @@ Let $\pp(x)$ be a \fncte{probability density function} on a \structe{probability
 \end{proof}
 
 %---------------------------------------
-\begin{definition}
-\index{Chi-squared distribution with $n$ degrees of freedom}
-\footnote{
-  \citerp{proakis}{41}
-  }
-%---------------------------------------
-The \fnctd{Chi-squared distribution with $n$ degrees of freedom} has pdf
-\defbox{
-  \ppy(y) \eqd \left\{\begin{array}{ll}
-    0 &:y<0 \\ \ds
-    \frac{1}{2\sigma^2\Gamma(n/2)}
-               \left(\frac{y}{2\sigma^2}\right)^{\frac{n}{2}-1}
-               \exp\brp{-\frac{y}{2\sigma^2}}
-    &:y\ge 0
-    \end{array}\right.
-  }
-\end{definition}
-
-%---------------------------------------
 \begin{theorem}
-\index{chi-squared distribution with $n$ degrees of freedom}
-\index{Gamma distribution}
 \footnote{
   \citerp{ross}{267}
   }
