--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -901,9 +901,9 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
   $\ds\begin{array}{|ccccc|}
     \hline
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal_0_1.pdf}}}
-    &\quad\rightarrow\quad&
+    &\rightarrow&
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/x_squared.pdf}}}
-    &\quad\rightarrow\quad&
+    &\rightarrow&
     \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/pdf_Normal01_ChiSq-k1.pdf}}}
     \\
     \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
@@ -937,7 +937,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
     }
   $
   \\where $\chi(k)$ is the \fncte{chi-squared distribution with $k$ degrees of freedom} \xref{def:chisq},
-  $\Gamma(x)$ is the \fncte{Gamma function} \xref{def:gamma}, and as illustrated in \prefpp{fig:YX2}.
+  \\$\Gamma(x)$ is the \fncte{Gamma function} \xref{def:gamma}, and as illustrated in \prefpp{fig:YX2}.
 }
 \end{example}
 \begin{proof}
