recursive sample variance estimation

--- a/common/sums.tex
+++ b/common/sums.tex
@@ -431,7 +431,7 @@ Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,
 \label{def:am}
 \label{def:gm}
 \label{def:hm}
-\label{def:average}
+%\label{def:average}
 %--------------------------------------
 Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple of weighting values. 
 %such that $\ds\sum_{n=1}^\xN\lambda_n=1$.
