--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1685,11 +1685,17 @@
  \newcommand{\Mx}  [0] {{\mathrm{\mu_{\rvx}}}}  % mean
  \newcommand{\pdf}[0] {{\mathrm{p}}}
  \DeclareMathOperator{\var}{var}
-\newcommand{\varest}{\hat{\var}}
+ \newcommand{\popvar}{\sigma^2}
+ \newcommand{\mean}{\mu}
+ \newcommand{\cmom}{\mu}
  \newcommand{\varb} [1] {\mathrm{var}\left[#1\right]}      % variance
  \newcommand{\cov}  [2] {\mathrm{cov}\left[#1, #2\right]}  % covariance
  \newcommand{\moment}{\mathfnct{M}} % moment
  \newcommand{\momest}{\hat{\moment}} % moment estimate
+ \newcommand{\meanest}{\hat{\mean}}
+ \newcommand{\cmomest}{\hat{\cmom}}
+ \newcommand{\varest}{\hat{\var}}
+ \newcommand{\popvarest}{\hat{\popvar}}
 
 %--------------------------------------
 % probability distributions
@@ -1997,8 +2003,6 @@
 \newcommand{\mse}{\mathfnct{mse}} % mean square error
 \newcommand{\mise}{\mathfnct{mse}} % mean integrated square error
 \newcommand{\nre}{\mathfnct{\epsilon}} % normalized rms error
-\newcommand{\mean}{\mu}
-\newcommand{\meanest}{\hat{\mean}}
 
 %--------------------------------------
 % Information theory
