--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -749,3 +749,51 @@ In software/firmware implementations, recursive forms are very useful and effici
         + \brs{\frac{n^2-3n+2}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
 \end{align*}
 \end{proof}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Fourth central moment recursive estimation}]
+\label{thm:cmom4_recursive}
+%---------------------------------------
+\thmbox{
+ \mcom{\cmomest_{4,n}}{new}
+  =   \mcom{\cmomest_{4,n-1}}{previous} + \brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }  \cmomest_{3,n-1}
+        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2\cmomest_{2,n-1}
+        - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3\brp{ \rvx_k - \meanest_{n-1} }   
+        + \frac{1}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^4
+  }
+\end{theorem}
+\begin{proof}
+\newpage
+{\begin{align*}
+  \cmomest_{4,n} =
+     &\eqd \sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^4
+     \qquad\text{by estimated 4th centralized moment}
+   \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^4
+   \\&= \sum_{k=1}^{n} \Bigg[
+                        \brp{ \rvx_k - \meanest_{n-1} }^4
+        - \frac{4}{n  } \brp{ \rvx_k - \meanest_{n-1} }^3 \brp{ \rvx_n-\meanest_{n-1} }
+        + \frac{6}{n^2} \brp{ \rvx_k - \meanest_{n-1} }^2 \brp{ \rvx_n-\meanest_{n-1} }^2
+        - \frac{4}{n^3} \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^3
+          \\&\qquad
+        + \frac{1}{n^4} \brp{ \rvx_n-\meanest_{n-1} }^4
+        \Bigg]
+   \\&=                 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^4
+        - \frac{4}{n  } \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^3 \brp{ \rvx_n-\meanest_{n-1} }
+        + \frac{6}{n^2} \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2 \brp{ \rvx_n-\meanest_{n-1} }^2
+          \\&\qquad
+        - \frac{4}{n^3} \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^3
+        + \frac{1}{n^4} \sum_{k=1}^n \brp{ \rvx_n-\meanest_{n-1} }^4
+   \\&=   \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^4}{$\cmomest_{4,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }   \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^3 
+        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2 
+           \\&\qquad
+        - \frac{4}{n^3}   \brp{ \rvx_n-\meanest_{n-1} }^3\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }   
+        + \frac{1}{n^4} n \brp{ \rvx_n-\meanest_{n-1} }^4
+   \\&=   \cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }  \cmomest_{3,n-1}
+        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2\cmomest_{2,n-1}
+        - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3\brp{ \rvx_k - \meanest_{n-1} }   
+        + \frac{1}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^4
+\end{align*}}
+\end{proof}
