--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -576,15 +576,15 @@ In software/firmware implementations, recursive forms are very useful and effici
 \label{thm:cmom2_recursive}
 %---------------------------------------
 \thmbox{
-  \meanest_{2,n} = \mcom{\meanest_{2,n-1}}{previous}
-                 + \mcom{\brs{\frac{n-1}{n}}}{weight}
+  \meanest_{2,n} = \frac{n-1}{n}\mcom{\meanest_{2,n-1}}{previous}
+                 + \mcom{\brs{\frac{n-1}{n^2}}}{weight}
                    \mcom{\brp{ \rvx_n - \meanest_{n-1} }^2}{square error}
   }
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \cmomest_{2,n}
-     &\eqd \sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^2
+  n\cmomest_{2,n}
+     &= n\frac{1}{n}\sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^2
      \qquad\text{by estimated 2nd centralized moment}
    \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^2
    \\&= \sum_{k=1}^{n} \brs{
@@ -600,27 +600,27 @@ In software/firmware implementations, recursive forms are very useful and effici
         - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \mcom{\sum_{k=1}^{n} \brp{ \rvx_k - \meanest_{n-1} }}{$\rvx_n - \meanest_{n-1}$ by \pref{lem:meanest}}
         + \frac{n}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2
      %
-   \\&=   \mcom{\brs{ \sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^2 }}{$\cmomest_{2,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^2
+   \\&=   \mcom{\brs{ \sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^2 }}{$(n-1)\cmomest_{2,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^2
         - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
         + \frac{1}{n} \brp{ \rvx_n-\meanest_{n-1} }^2
      %
-   \\&=   \cmomest_{2,n-1}
+   \\&=   (n-1)\cmomest_{2,n-1}
         + \brs{1 + \frac{1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
         - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
      %
-   \\&=   \cmomest_{2,n-1}
+   \\&=   (n-1)\cmomest_{2,n-1}
         + \brs{\frac{n+1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
         - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
      %
-   \\&=   \cmomest_{2,n-1}
+   \\&=   (n-1)\cmomest_{2,n-1}
         + \brs{\frac{n+1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
         - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
      %
-   \\&=   \cmomest_{2,n-1}
+   \\&=   (n-1)\cmomest_{2,n-1}
         + \brs{\frac{n+1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
         - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} }^2
      %
-   \\&=   \cmomest_{2,n-1} + \brs{\frac{n-1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
+   \\&=   (n-1)\cmomest_{2,n-1} + \brs{\frac{n-1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
 \end{align*}
 % Praise the Lord!!!
 \end{proof}
@@ -701,15 +701,15 @@ In software/firmware implementations, recursive forms are very useful and effici
 %---------------------------------------
 \thmbox{
   \meanest_{3,n} =
-      \cmomest_{3,n-1}
-    - \frac{3}{n}  \brp{ \rvx_n-\meanest_{n-1} } \cmomest_{2,n-1}
-    + \brs{\frac{n^2-3n+2}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
+      \frac{n-1}{n}\cmomest_{3,n-1}
+    - \frac{3(n-1)}{n^2}  \brp{ \rvx_n-\meanest_{n-1} } \cmomest_{2,n-1}
+    + \brs{\frac{n^2-3n+2}{n^3} }\brp{ \rvx_n - \meanest_{n-1} }^3
   }
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \cmomest_{3,n} =
-     &\eqd \sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^3
+  n\cmomest_{3,n} =
+     &= n\frac{1}{n}\sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^3
      \qquad\text{by estimated 3rd centralized moment}
    \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^3
    \\&= \sum_{k=1}^{n} \brs{
@@ -726,26 +726,26 @@ In software/firmware implementations, recursive forms are very useful and effici
         - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }   \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2
         + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \mcom{\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }}{$\rvx_n - \meanest_{n-1}$ by \pref{lem:meanest}}
         - \frac{1}{n^3} n \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=                 \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^3}{$\cmomest_{3,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }  \brs{\mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^2}{$\cmomest_{2,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
+   \\&= \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^3}{$(n-1)\cmomest_{3,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^3
+        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }  \brs{\mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^2}{$(n-1)\cmomest_{2,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
       \\&\qquad + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{ \rvx_n - \meanest_{n-1} }
         - \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=  \cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }   \brs{ \cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
+   \\&=  (n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3
+        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }   \brs{ (n-1)\cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
         + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{ \rvx_n - \meanest_{n-1} }
       \\&\qquad- \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=  \cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } \cmomest_{2,n-1}
+   \\&=  (n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3
+        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
         - \frac{3}{n}   \brp{ \rvx_n - \meanest_{n-1} }^3
       \\&\qquad  + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{ \rvx_n - \meanest_{n-1} }
         - \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=  \cmomest_{3,n-1} + \brs{1 -\frac{3}{n} -\frac{1}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } \cmomest_{2,n-1}
+   \\&=  (n-1)\cmomest_{3,n-1} + \brs{1 -\frac{3}{n} -\frac{1}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
+        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
         + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{\rvx_n-\meanest_{n-1}}
-   \\&=  \cmomest_{3,n-1} + \brs{1 -\frac{3}{n} -\frac{1}{n^2} + \frac{3}{n^2}}\brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } \cmomest_{2,n-1}
-   \\&=  \cmomest_{3,n-1}
-        - \frac{3}{n}  \brp{ \rvx_n-\meanest_{n-1} } \cmomest_{2,n-1}
+   \\&=  (n-1)\cmomest_{3,n-1} + \brs{1 -\frac{3}{n} -\frac{1}{n^2} + \frac{3}{n^2}}\brp{ \rvx_n - \meanest_{n-1} }^3
+        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
+   \\&=  (n-1)\cmomest_{3,n-1}
+        - \frac{3}{n}  \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
         + \brs{\frac{n^2-3n+2}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
 \end{align*}
 \end{proof}
@@ -754,20 +754,27 @@ In software/firmware implementations, recursive forms are very useful and effici
 \begin{theorem}[\thmd{Fourth central moment recursive estimation}]
 \label{thm:cmom4_recursive}
 %---------------------------------------
-\thmbox{
- \mcom{\cmomest_{4,n}}{new}
-  =   \mcom{\cmomest_{4,n-1}}{previous} + \brp{ \rvx_n - \meanest_{n-1} }^4
-        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }  \cmomest_{3,n-1}
-        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2\cmomest_{2,n-1}
-        - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3\brp{ \rvx_k - \meanest_{n-1} }   
-        + \frac{1}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^4
-  }
+\thmbox{%\begin{array}{rc>{\ds}l}
+ \cmomest_{4,n}
+   = \frac{n-1}{n}\cmomest_{4,n-1}
+        + \brs{ \frac{n^3 -4n^2 +6n -3}{n^4} }\brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4(n-1)}{n^2  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+        + \frac{6(n-1)}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
+}
 \end{theorem}
 \begin{proof}
-\newpage
-{\begin{align*}
-  \cmomest_{4,n} =
-     &\eqd \sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^4
+\begin{enumerate}
+  \item lemma: \label{ilem:cmom4_recursive_cmomest}
+               $\ds\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^p = (n-1)\cmomest_{p,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^p$. Proof:
+               \begin{align*}
+                 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^p
+                   &= \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^p}{$(n-1)\cmomest_{p,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^p
+                 \\&= (n-1)\cmomest_{p,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^p
+               \end{align*}
+\item 
+\begin{align*}
+  n\cmomest_{4,n} =
+     &= n\frac{1}{n}\sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^4
      \qquad\text{by estimated 4th centralized moment}
    \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^4
    \\&= \sum_{k=1}^{n} \Bigg[
@@ -784,16 +791,36 @@ In software/firmware implementations, recursive forms are very useful and effici
           \\&\qquad
         - \frac{4}{n^3} \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^3
         + \frac{1}{n^4} \sum_{k=1}^n \brp{ \rvx_n-\meanest_{n-1} }^4
-   \\&=   \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^4}{$\cmomest_{4,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^4
-        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }   \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^3 
-        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2 
+   \\&= \brs{(n-1)\cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4}
+        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }   \brs{(n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3}
+        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brs{(n-1)\cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2}
            \\&\qquad
-        - \frac{4}{n^3}   \brp{ \rvx_n-\meanest_{n-1} }^3\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }   
+        - \frac{4}{n^3}   \brp{ \rvx_n-\meanest_{n-1} }^3\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }
         + \frac{1}{n^4} n \brp{ \rvx_n-\meanest_{n-1} }^4
-   \\&=   \cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4
-        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }  \cmomest_{3,n-1}
-        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2\cmomest_{2,n-1}
-        - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3\brp{ \rvx_k - \meanest_{n-1} }   
+        \qquad\text{by \pref{ilem:cmom4_recursive_cmomest}}
+   \\&= \brs{(n-1)\cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4 }
+        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }   \brs{(n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3}
+        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brs{(n-1)\cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2}
+           \\&\qquad
+        - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3 \brs{ \rvx_n - \meanest_{n-1} }
         + \frac{1}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^4
-\end{align*}}
+        \qquad\text{by \pref{lem:meanest}}
+   \\&= (n-1)\cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4(n-1)}{n  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+        - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }^4
+        + \frac{6(n-1)}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
+        + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^4
+           \\&\qquad
+        - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^4
+        + \frac{1}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^4
+   \\&= (n-1)\cmomest_{4,n-1}
+      + \brs{1 -\frac{4}{n} +\frac{6}{n^2} -\frac{4}{n^3} +\frac{1}{n^3} }\brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4(n-1)}{n  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+        + \frac{6(n-1)}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
+   \\&= (n-1)\cmomest_{4,n-1}
+      + \brs{ \frac{n^3 -4n^2 +6n -3}{n^3} }\brp{ \rvx_n - \meanest_{n-1} }^4
+        - \frac{4(n-1)}{n  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+        + \frac{6(n-1)}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
+\end{align*}
+\end{enumerate}
 \end{proof}
