--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -572,11 +572,37 @@ In software/firmware implementations, recursive forms are very useful and effici
 \end{proof}
 
 %---------------------------------------
+\begin{theorem}[\thmd{Order-$p$ central moment recursive estimation}]
+\label{thm:cmomest_recursive}
+%---------------------------------------
+\thmbox{
+  \cmomest_{p,n}
+    = \frac{1}{n}\sum_{k=1}^n \bcoef{p}{m}
+      \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^m
+      \brs{ (n-1) \cmomest_{p-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{p-m} }
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \cmomest_{p,n}
+    &\eqd \frac{1}{n} \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_n }^p
+  \\&=    \frac{1}{n} \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^p
+  \\&=    \frac{1}{n} \sum_{k=1}^{n} \sum_{m=0}^p \bcoef{p}{m} \brs{ \rvx_k - \meanest_{n-1} }^{p-m} \brs{ - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^m
+  \\&=    \frac{1}{n} \sum_{m=0}^p \bcoef{p}{m}  \brs{ - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^m  \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} }^{p-m}
+  \\&=    \frac{1}{n} \sum_{m=0}^p \bcoef{p}{m}  \brs{ - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^m
+                      \brs{(n-1)\mcom{\frac{1}{n-1}\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^{p-m}}{$\cmomest_{p-m,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^{p-m} }
+  \\&=    \frac{1}{n} \sum_{k=1}^n \bcoef{p}{m}
+          \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^m
+          \brs{ (n-1) \cmomest_{p-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{p-m} }
+\end{align*}
+\end{proof}
+
+%---------------------------------------
 \begin{theorem}[\thmd{Second central moment recursive estimation}]
 \label{thm:cmom2_recursive}
 %---------------------------------------
 \thmbox{
-  \meanest_{2,n} = \frac{n-1}{n}\mcom{\meanest_{2,n-1}}{previous}
+  \cmomest_{2,n} = \frac{n-1}{n}\mcom{\meanest_{2,n-1}}{previous}
                  + \mcom{\brs{\frac{n-1}{n^2}}}{weight}
                    \mcom{\brp{ \rvx_n - \meanest_{n-1} }^2}{square error}
   }
@@ -584,43 +610,19 @@ In software/firmware implementations, recursive forms are very useful and effici
 \begin{proof}
 \begin{align*}
   n\cmomest_{2,n}
-     &= n\frac{1}{n}\sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^2
-     \qquad\text{by estimated 2nd centralized moment}
-   \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^2
-   \\&= \sum_{k=1}^{n} \brs{
-                        \brp{ \rvx_k - \meanest_{n-1} }^2
-        - \frac{2}{n}   \brp{ \rvx_k - \meanest_{n-1} } \brp{ \rvx_n-\meanest_{n-1} }
-        + \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2
-        }
-   \\&=                 \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_{n-1} }^2
-        - \frac{2}{n}   \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_{n-1} } \brp{ \rvx_n-\meanest_{n-1} }
-        + \frac{1}{n^2} \sum_{k=1}^{n} \brp{ \rvx_n-\meanest_{n-1} }^2
-     %
-   \\&=   \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_{n-1} }^2
-        - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \mcom{\sum_{k=1}^{n} \brp{ \rvx_k - \meanest_{n-1} }}{$\rvx_n - \meanest_{n-1}$ by \pref{lem:meanest}}
-        + \frac{n}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2
-     %
-   \\&=   \mcom{\brs{ \sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^2 }}{$(n-1)\cmomest_{2,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^2
-        - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
-        + \frac{1}{n} \brp{ \rvx_n-\meanest_{n-1} }^2
-     %
-   \\&=   (n-1)\cmomest_{2,n-1}
-        + \brs{1 + \frac{1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
-        - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
-     %
-   \\&=   (n-1)\cmomest_{2,n-1}
-        + \brs{\frac{n+1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
-        - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
-     %
-   \\&=   (n-1)\cmomest_{2,n-1}
-        + \brs{\frac{n+1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
-        - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} } \brp{ \rvx_n - \meanest_{n-1} }
-     %
-   \\&=   (n-1)\cmomest_{2,n-1}
-        + \brs{\frac{n+1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
-        - \frac{2}{n} \brp{ \rvx_n-\meanest_{n-1} }^2
-     %
-   \\&=   (n-1)\cmomest_{2,n-1} + \brs{\frac{n-1}{n}} \brp{ \rvx_n - \meanest_{n-1} }^2
+    &= \sum_{k=1}^n \bcoef{2}{m}
+       \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^m
+       \brs{ (n-1) \cmomest_{2-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{2-m} }
+  \\&= \cancelto{1}{\bcoef{2}{0}} 1 \brs{ (n-1) \cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{2} }
+     + \cancelto{2}{\bcoef{2}{1}} \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }   \brs{ (n-1) \cancelto{0}{\cmomest_{1,n-1}} + \brp{ \rvx_n - \meanest_{n-1} } }
+       \\&\qquad
+     + \cancelto{1}{\bcoef{2}{2}} \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^2 \brs{ (n-1) \cancelto{1}{\cmomest_{0,n-1}} + 1 }
+  \\&= (n-1) \cmomest_{2,n-1}
+     +              \brp{ \rvx_n - \meanest_{n-1} }^2
+     -\frac{2}{n  } \brp{ \rvx_n - \meanest_{n-1} }^2
+     +\frac{1}{n^2} \brp{ \rvx_n - \meanest_{n-1} }^2 \brs{ (n-1) + 1 }
+  \\&= (n-1)\cmomest_{2,n-1} + \brs{ 1 - \frac{2}{n} + \frac{1}{n} } \brp{ \rvx_n - \meanest_{n-1} }^2
+  \\&= (n-1)\cmomest_{2,n-1} + \brs{ \frac{n-1}{n}                 } \brp{ \rvx_n - \meanest_{n-1} }^2
 \end{align*}
 % Praise the Lord!!!
 \end{proof}
@@ -708,45 +710,31 @@ In software/firmware implementations, recursive forms are very useful and effici
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  n\cmomest_{3,n} =
-     &= n\frac{1}{n}\sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^3
-     \qquad\text{by estimated 3rd centralized moment}
-   \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^3
-   \\&= \sum_{k=1}^{n} \brs{
-                        \brp{ \rvx_k - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_k - \meanest_{n-1} }^2 \brp{ \rvx_n-\meanest_{n-1} }
-        + \frac{3}{n^2} \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^2
-        - \frac{1}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3
-        }
-   \\&=                 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^3
-        - \frac{3}{n}   \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2 \brp{ \rvx_n-\meanest_{n-1} }
-        + \frac{3}{n^2} \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^2
-        - \frac{1}{n^3} \sum_{k=1}^n \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=                 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }   \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2
-        + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \mcom{\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }}{$\rvx_n - \meanest_{n-1}$ by \pref{lem:meanest}}
-        - \frac{1}{n^3} n \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&= \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^3}{$(n-1)\cmomest_{3,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }  \brs{\mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^2}{$(n-1)\cmomest_{2,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
-      \\&\qquad + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{ \rvx_n - \meanest_{n-1} }
-        - \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=  (n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} }   \brs{ (n-1)\cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
-        + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{ \rvx_n - \meanest_{n-1} }
-      \\&\qquad- \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=  (n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
-        - \frac{3}{n}   \brp{ \rvx_n - \meanest_{n-1} }^3
-      \\&\qquad  + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{ \rvx_n - \meanest_{n-1} }
-        - \frac{1}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^3
-   \\&=  (n-1)\cmomest_{3,n-1} + \brs{1 -\frac{3}{n} -\frac{1}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
-        + \frac{3}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brp{\rvx_n-\meanest_{n-1}}
-   \\&=  (n-1)\cmomest_{3,n-1} + \brs{1 -\frac{3}{n} -\frac{1}{n^2} + \frac{3}{n^2}}\brp{ \rvx_n - \meanest_{n-1} }^3
-        - \frac{3}{n}   \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
-   \\&=  (n-1)\cmomest_{3,n-1}
-        - \frac{3}{n}  \brp{ \rvx_n-\meanest_{n-1} } (n-1)\cmomest_{2,n-1}
-        + \brs{\frac{n^2-3n+2}{n^2} }\brp{ \rvx_n - \meanest_{n-1} }^3
+  n\cmomest_{3,n}
+    &= \sum_{k=1}^n \bcoef{3}{m}
+      \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^m
+      \brs{ (n-1) \cmomest_{3-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{3-m} }
+  \\&=             \bcoef{3}{0} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^0 \brs{ (n-1) \cmomest_{3-0,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{3-0} }
+       \\&\qquad + \bcoef{3}{1} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^1 \brs{ (n-1) \cmomest_{3-1,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{3-1} }
+       \\&\qquad + \bcoef{3}{2} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^2 \brs{ (n-1) \cancelto{0}{\cmomest_{3-2,n-1}} + \brp{ \rvx_n - \meanest_{n-1} }^{3-2} }
+       \\&\qquad + \bcoef{3}{3} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^3 \brs{ (n-1) \cancelto{1}{\cmomest_{3-3,n-1}} + \brp{ \rvx_n - \meanest_{n-1} }^{3-3} }
+  \\&=                                             \brs{ (n-1) \cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3 }
+     - \frac{3}{n  } \brp{\rvx_n-\cmomest_{n-1}}   \brs{ (n-1) \cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2 }
+       \\&\qquad
+     + \frac{3}{n^2} \brp{\rvx_n-\cmomest_{n-1}}^2 \brs{                          \brp{ \rvx_n - \meanest_{n-1} }   }
+     - \frac{1}{n^3} \brp{\rvx_n-\cmomest_{n-1}}^3 \brs{ (n-1)                  + 1                                 }
+  \\&= (n-1)\cmomest_{3,n-1}
+     +                  \brp{ \rvx_n - \meanest_{n-1} }^3
+     - \frac{3(n-1)}{n} \brp{ \rvx_n - \meanest_{n-1} } \cmomest_{2,n-1}
+     - \frac{3}{n  }    \brp{ \rvx_n - \meanest_{n-1} }^3
+     + \frac{3}{n^2}    \brp{ \rvx_n - \meanest_{n-1} }^3
+     - \frac{1}{n^2}    \brp{ \rvx_n - \meanest_{n-1} }^3
+  \\&= (n-1)\cmomest_{3,n-1}
+     + \brs{ 1 - \frac{3}{n  } + \frac{3}{n^2} - \frac{1}{n^2} } \brp{ \rvx_n - \meanest_{n-1} }^3
+     - \frac{3(n-1)}{n} \brp{ \rvx_n - \meanest_{n-1} } \cmomest_{2,n-1}
+  \\&= (n-1)\cmomest_{3,n-1}
+     - \frac{3n-3}{n} \brp{ \rvx_n - \meanest_{n-1} } \cmomest_{2,n-1}
+     + \brs{ \frac{n^2 -3n + 2 }{n^2} } \brp{ \rvx_n - \meanest_{n-1} }^3
 \end{align*}
 \end{proof}
 
@@ -754,26 +742,40 @@ In software/firmware implementations, recursive forms are very useful and effici
 \begin{theorem}[\thmd{Fourth central moment recursive estimation}]
 \label{thm:cmom4_recursive}
 %---------------------------------------
-\thmbox{%\begin{array}{rc>{\ds}l}
- \cmomest_{4,n}
-   = \frac{n-1}{n}\cmomest_{4,n-1}
-        + \brs{ \frac{n^3 -4n^2 +6n -3}{n^4} }\brp{ \rvx_n - \meanest_{n-1} }^4
-        - \frac{4(n-1)}{n^2  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
-        + \frac{6(n-1)}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
-}
+\thmbox{\begin{array}{rc>{\ds}l}
+ \cmomest_{4,n} &=&
+      \frac{n-1}{n}\cmomest_{4,n-1}
+    + \brs{ \frac{n^3 -4n^2 +6n -3}{n^4} }\brp{ \rvx_n - \meanest_{n-1} }^4
+    - \frac{4(n-1)}{n^2  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+    \\&&
+    + \frac{6(n-1)}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
+\end{array}}
 \end{theorem}
 \begin{proof}
+
+
+%\begin{align*}
+%  n\cmomest_{4,n}
+%    &= \sum_{k=1}^n \bcoef{4}{m}
+%      \brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^m
+%      \brs{ (n-1) \cmomest_{4-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{4-m} }
+%  \\&= \bcoef{4}{0}\brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^0 \brs{ (n-1) \cmomest_{4-0,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{4-0} }
+%       \bcoef{4}{1}\brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^1 \brs{ (n-1) \cmomest_{4-1,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{4-1} }
+%       \bcoef{4}{2}\brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^2 \brs{ (n-1) \cmomest_{4-2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{4-2} }
+%       \bcoef{4}{3}\brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^3 \brs{ (n-1) \cmomest_{4-3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{4-3} }
+%       \bcoef{4}{4}\brs{ -\frac{1}{n}\brp{\rvx_n-\cmomest_{n-1}} }^4 \brs{ (n-1) \cmomest_{4-4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{4-4} }
+%\end{align*}
+
 \begin{enumerate}
   \item lemma: \label{ilem:cmom4_recursive_cmomest}
-               $\ds\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^p = (n-1)\cmomest_{p,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^p$. Proof:
-               \begin{align*}
-                 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^p
-                   &= \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^p}{$(n-1)\cmomest_{p,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^p
-                 \\&= (n-1)\cmomest_{p,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^p
-               \end{align*}
-\item 
+        $\ds
+          \boxed{\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^p}
+             = \mcom{\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^p}{$(n-1)\cmomest_{p,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^p
+             = \boxed{(n-1)\cmomest_{p,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^p}
+        $
+\item
 \begin{align*}
-  n\cmomest_{4,n} =
+  n\cmomest_{4,n}
      &= n\frac{1}{n}\sum_{k=1}^n \brp{ \rvx_k - \meanest_n }^4
      \qquad\text{by estimated 4th centralized moment}
    \\&= \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n-\meanest_{n-1} } }^4
@@ -781,18 +783,20 @@ In software/firmware implementations, recursive forms are very useful and effici
                         \brp{ \rvx_k - \meanest_{n-1} }^4
         - \frac{4}{n  } \brp{ \rvx_k - \meanest_{n-1} }^3 \brp{ \rvx_n-\meanest_{n-1} }
         + \frac{6}{n^2} \brp{ \rvx_k - \meanest_{n-1} }^2 \brp{ \rvx_n-\meanest_{n-1} }^2
-        - \frac{4}{n^3} \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^3
           \\&\qquad
+        - \frac{4}{n^3} \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^3
         + \frac{1}{n^4} \brp{ \rvx_n-\meanest_{n-1} }^4
         \Bigg]
    \\&=                 \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^4
         - \frac{4}{n  } \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^3 \brp{ \rvx_n-\meanest_{n-1} }
+          \\&\qquad
         + \frac{6}{n^2} \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }^2 \brp{ \rvx_n-\meanest_{n-1} }^2
           \\&\qquad
         - \frac{4}{n^3} \sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }   \brp{ \rvx_n-\meanest_{n-1} }^3
         + \frac{1}{n^4} \sum_{k=1}^n \brp{ \rvx_n-\meanest_{n-1} }^4
    \\&= \brs{(n-1)\cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4}
         - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }   \brs{(n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3}
+           \\&\qquad
         + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brs{(n-1)\cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2}
            \\&\qquad
         - \frac{4}{n^3}   \brp{ \rvx_n-\meanest_{n-1} }^3\sum_{k=1}^n \brp{ \rvx_k - \meanest_{n-1} }
@@ -800,6 +804,7 @@ In software/firmware implementations, recursive forms are very useful and effici
         \qquad\text{by \pref{ilem:cmom4_recursive_cmomest}}
    \\&= \brs{(n-1)\cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4 }
         - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }   \brs{(n-1)\cmomest_{3,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^3}
+           \\&\qquad
         + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \brs{(n-1)\cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^2}
            \\&\qquad
         - \frac{4}{n^3} \brp{ \rvx_n-\meanest_{n-1} }^3 \brs{ \rvx_n - \meanest_{n-1} }
@@ -808,6 +813,7 @@ In software/firmware implementations, recursive forms are very useful and effici
    \\&= (n-1)\cmomest_{4,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^4
         - \frac{4(n-1)}{n  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
         - \frac{4}{n  } \brp{ \rvx_n-\meanest_{n-1} }^4
+           \\&\qquad
         + \frac{6(n-1)}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
         + \frac{6}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^4
            \\&\qquad
@@ -816,10 +822,12 @@ In software/firmware implementations, recursive forms are very useful and effici
    \\&= (n-1)\cmomest_{4,n-1}
       + \brs{1 -\frac{4}{n} +\frac{6}{n^2} -\frac{4}{n^3} +\frac{1}{n^3} }\brp{ \rvx_n - \meanest_{n-1} }^4
         - \frac{4(n-1)}{n  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+           \\&\qquad
         + \frac{6(n-1)}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
    \\&= (n-1)\cmomest_{4,n-1}
       + \brs{ \frac{n^3 -4n^2 +6n -3}{n^3} }\brp{ \rvx_n - \meanest_{n-1} }^4
         - \frac{4(n-1)}{n  } \brp{ \rvx_n-\meanest_{n-1} }\cmomest_{3,n-1}
+           \\&\qquad
         + \frac{6(n-1)}{n^2} \brp{ \rvx_n-\meanest_{n-1} }^2 \cmomest_{2,n-1}
 \end{align*}
 \end{enumerate}
