recursive average example

--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -572,6 +572,38 @@ In software/firmware implementations, recursive forms are very useful and effici
 \end{proof}
 
 %---------------------------------------
+\begin{example}
+\label{ex:average_recursive}
+%---------------------------------------
+Let $X \eqd \seqn{1,2,3,4,5}$ be a finite sequence of numbers.
+The \fncte{average} \xref{def:average} of $X$ is 
+\\\indentx$\ds
+  \boxed{\meanest} \eqd \frac{1}{\xN}\sum_{n=1}^\xN x_n 
+                   =    \frac{1}{5}\brp{1+2+3+4+5} 
+                   =    \frac{15}{5} 
+                   =    \boxed{3}
+$.\\
+Using the recursive method of \prefpp{cor:average_recursive} with $\meanest_n \eqd 0$ for all $n\le0$, yields
+\exbox{\begin{array}{l|rclcl clcl cl}
+  n=1 & \meanest_1 &=& \meanest_0   &+& \frac{1}{1}\brp{ \rvx_1 - \meanest_0 }
+                   &=& 0            &+&          1 \brp{ 1      - 0          }
+                   &=& 1\\
+  n=2 & \meanest_2 &=& \meanest_1   &+& \frac{1}{2}\brp{ \rvx_2 - \meanest_1 }
+                   &=& 1            &+& \frac{1}{2}\brp{ 2      - 1          }
+                   &=& \frac{3}{2} \\
+  n=3 & \meanest_3 &=& \meanest_2   &+& \frac{1}{3}\brp{ \rvx_3 - \meanest_2 }
+                   &=& \frac{3}{2}  &+& \frac{1}{3}\brp{ 3      - \frac{3}{2}}
+                   &=& 2           \\
+  n=4 & \meanest_4 &=& \meanest_3   &+& \frac{1}{4}\brp{ \rvx_4 - \meanest_3 }
+                   &=& 2            &+& \frac{1}{4}\brp{ 4      - 2          }
+                   &=& \frac{5}{2} \\
+  n=5 & \boxed{\meanest_5} &=& \meanest_4   &+& \frac{1}{5}\brp{ \rvx_5 - \meanest_4 }
+                   &=& \frac{5}{2}  &+& \frac{1}{5}\brp{ 5      - \frac{5}{2}}
+                   &=& \boxed{3}
+\end{array}}
+\end{example}
+
+%---------------------------------------
 \begin{theorem}[\thmd{Order-$p$ central moment recursive estimation}]
 \label{thm:cmomest_recursive}
 %---------------------------------------
