moments, central moments, skewness, kurtosis

--- a/common/model_estimation.tex
+++ b/common/model_estimation.tex
@@ -8,8 +8,8 @@
 %=======================================
 A key point in model building is choosing what to model.
 Defining a model with too many system properties (too many dimensions) can quickly lead to 
-an intractable solution computationally and require more data than is available
-(the ``curse of dimensionality").
+an intractable solution computationally and require more data than is 
+available---the ``curse of dimensionality" \xref{chp:dimreduct}.
 
 For modeling real-world random processes above the quantum level, here are some possibly useful parameters to estimate and use:
 \begin{enumerate}
