--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -6,6 +6,13 @@
 \chapter{Moment Estimation}
 \label{chp:moment_estimation}
 %=======================================
+
+For a \fncte{random variable} $\rvX$ on a \structe{probability space} $\ps$,
+The $n$th \fncte{moment} and \fncte{central moments}, \fncte{mean}, \fncte{variance}, \fncte{skewness}, and \fncte{kurtosis}
+are defined in \pref{def:cmom} and \prefpp{def:mean}.
+In practice, they are unknown. However, they can be estimated.
+This chapter introduces some estimates of those quantities.
+
 %=======================================
 \section{Mean Estimation}
 %=======================================
@@ -14,13 +21,13 @@
 \label{thm:mse_mean}
 %---------------------------------------
 Let $\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$ with $\ds\sum_{n=1}^{\xN}\lambda_n=1$
-be the \fncte{arithmetic mean} \xref{def:am}.
+be the \fncte{arithmetic mean} estimate \xref{def:am} of a sequence $\seqn{\rvx_n}$ of samples drawn from a
+random variable $\rvX$. The \prope{quality} \xref{sec:quality} of this estimator is described as follows:
 \thmbox{%
   \brb{\begin{array}{FMD}
       (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
     \\(B).& $\mean\eqd\pE\rvx_n$                             & and
-    \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          & and
-    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\sum_{n=1}^\xN \lambda_n \rvx_n$\qquad(\fncte{arithmetic mean})}
+    \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          &
   \end{array}}
   \implies
   \brb{\begin{array}{FrclDD}
@@ -83,7 +90,7 @@ be the \fncte{arithmetic mean} \xref{def:am}.
     &= \pE\brp{\meanest-\pE\meanest}^2
         +\brp{\pE\meanest-\mean}^2
     && \text{by \prefp{thm:mse}}
-  \\&= \pvar\sum_{n=1}^{\xN}\lambda_n^2 + \brp{\mean-\mean}^2
+  \\&= \brs{\pvar\sum_{n=1}^{\xN}\lambda_n^2} + \cancelto{0}{\brp{\mean-\mean}^2}
     && \text{by previous results}
   \\&= \pvar\sum_{n=1}^{\xN}\lambda_n^2
 \end{align*}
@@ -107,12 +114,13 @@ be the \fncte{arithmetic mean} \xref{def:am}.
   }
 \label{cor:mse_average}
 %---------------------------------------
+Let $\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN$ be the \fncte{average} \xref{def:average} of a random variable $\rvX$.
+The \prope{quality} \xref{sec:quality} of this estimator is described as follows:
 \corbox{
   \brb{\begin{array}{FMD}
       (A).& $\seqn{\rvx_n}$ is \prope{wide sense stationary} & and
     \\(B).& $\mean\eqd\pE\rvx_n$                             & and
-    \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          & and
-    \\(D).& \mc{2}{M}{$\ds\meanest\eqd\frac{1}{\xN}\sum_{n=1}^\xN \rvx_n$\qquad(\fncte{average})}
+    \\(C).& $\seqn{\rvx_n}$ is \prope{uncorrelated}          &
   \end{array}}
   \implies
   \brb{\begin{array}{FrclDD}
@@ -125,7 +133,6 @@ be the \fncte{arithmetic mean} \xref{def:am}.
 \begin{proof}
 These results follow from \prefpp{thm:mse_mean} with $\lambda_n=\frac{1}{\xN}$.
 \end{proof}
-
 
 The \fncte{arithmetic mean} estimator $\meanest\eqd\sum\lambda_n\rvx_n$
 is \prope{unbiased} and \prope{consistent} for any $\sum\lambda_n=1$ and
