--- a/common/symbol_detection.tex
+++ b/common/symbol_detection.tex
@@ -324,18 +324,18 @@ The inverse matrix $R^{-1}$ is equivalent to (????) \attention
 \begin{proof}
 \begin{align*}
    \pE{z_k}
-     &= \pEb{\fdotr_{11}-\fdotr_{1k}}
-   \\&= \pE{\fdotr_{11}}- \pE{\fdotr_{1k}}
+     &= \pE\brs{{\fdotr_{11}-\fdotr_{1k}}}
+   \\&= \pE\brs{\fdotr_{11}}- \pE\brs{\fdotr_{1k}}
    \\&= \fdots - 0
    \\&= \fdots
 \end{align*}
 
 \begin{align*}
    \cov{z_m}{z_n}
-     &= \pEb{z_m z_n} - [\pE z_m][\pE z_n]
-   \\&= \pEb{(\fdotr_{11}-\fdotr_{1m})(\fdotr_{11}-\fdotr_{1n})} - \fdots^2
-   \\&= \pEb{\fdotr_{11}^2 -\fdotr_{11}\fdotr_{1n} - \fdotr_{1m}\fdotr_{11} \fdotr_{1m}\fdotr_{1n}} - \fdots^2
-   \\&= [\var \fdotr_{11} + (\pE \fdotr_{11})^2] - \pEb{\fdotr_{11}}\pEb{\fdotr_{1n}} - \pEb{\fdotr_{1m}}\pEb{\fdotr_{11}} + [\cov{\fdotr_{1m}}{\fdotr_{1n}} + (\pE \fdotr_{1m})(\pE \fdotr_{1n})] - \fdots^2
+     &= \pE\brs{z_m z_n} - [\pE z_m][\pE z_n]
+   \\&= \pE\brs{(\fdotr_{11}-\fdotr_{1m})(\fdotr_{11}-\fdotr_{1n})} - \fdots^2
+   \\&= \pE\brs{\fdotr_{11}^2 -\fdotr_{11}\fdotr_{1n} - \fdotr_{1m}\fdotr_{11} \fdotr_{1m}\fdotr_{1n}} - \fdots^2
+   \\&= [\var \fdotr_{11} + (\pE \fdotr_{11})^2] - \pE\brs{\fdotr_{11}}\pE\brs{\fdotr_{1n}} - \pE\brs{\fdotr_{1m}}\pE\brs{\fdotr_{11}} + [\cov{\fdotr_{1m}}{\fdotr_{1n}} + (\pE \fdotr_{1m})(\pE \fdotr_{1n})] - \fdots^2
    \\&= [\var \fdotr_{11} + \fdots^2] - a\cdot0 - 0\cdot a + [\cov{\fdotr_{1m}}{\fdotr_{1n}} + 0\cdot0] - \fdots^2
    \\&= \var \fdotr_{11} + \cov{\fdotr_{1m}}{\fdotr_{1n}}
    \\&= \xN_o + \cov{\fdotr_{1m}}{\fdotr_{1n}}
